--- a/MediaPlayer/Properties/Resources.resx
+++ b/MediaPlayer/Properties/Resources.resx
@@ -157,4 +157,10 @@
   <data name="headphones" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\headphones.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="good_times_rg" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\good_times_rg.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="still_time" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\still_time.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
